--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1055,6 +1055,20 @@ html::-webkit-scrollbar-thumb{
                   font-size: 18px;
                   margin-bottom: 15px;
                }
+               .recher #dateArrivee{
+                  margin-left: 30px;
+               }
+               .recher #dateDepart{
+                  margin-left: 30px;
+                  margin-right: 30px;
+               }
+               .recher{
+                  border:solid 1px gray;
+                  padding:10px;
+               }
+               .recher .bt{
+                  margin-right:30px;
+               }
                 
 
              
